NetBSD Problem Report #52738

From martin@duskware.de  Sun Nov 19 20:57:39 2017
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 696D47A10D
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 19 Nov 2017 20:57:39 +0000 (UTC)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: rumpfs does not support mtime
X-Send-Pr-Version: 3.95

>Number:         52738
>Category:       kern
>Synopsis:       rumpfs does not support mtime
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Nov 19 21:00:00 +0000 2017
>Closed-Date:    Mon Nov 20 17:10:02 +0000 2017
>Last-Modified:  Mon Feb 26 01:20:01 +0000 2018
>Originator:     Martin Husemann
>Release:        NetBSD 8.99.6
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD night-owl.duskware.de 8.99.6 NetBSD 8.99.6 (NIGHT-OWL) #555: Tue Nov 14 10:04:20 CET 2017 martin@night-owl.duskware.de:/usr/src/sys/arch/amd64/compile/NIGHT-OWL amd64
Architecture: x86_64
Machine: amd64
>Description:

While trying to fix PR kern/51762 I noticed that rumpfs never updates the
mtime of anything. The only time a time stamp is set is during setattr VOP
calls setting one of the time stamps externaly, and during initial vnode
creation in makeprivate().

>How-To-Repeat:

Write something on rumpfs, check stat(2) values of mtime before and after.
ATF test program will be added ASAP.

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52738 CVS commit: src
Date: Sun, 19 Nov 2017 21:05:26 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Nov 19 21:05:26 UTC 2017

 Modified Files:
 	src/distrib/sets/lists/debug: mi
 	src/distrib/sets/lists/tests: mi
 	src/tests/fs/vfs: Makefile
 Added Files:
 	src/tests/fs/vfs: t_mtime_write.c

 Log Message:
 ATF test program for PR kern/52738: check for mtime updates after rewriting
 a file.


 To generate a diff of this commit:
 cvs rdiff -u -r1.228 -r1.229 src/distrib/sets/lists/debug/mi
 cvs rdiff -u -r1.766 -r1.767 src/distrib/sets/lists/tests/mi
 cvs rdiff -u -r1.24 -r1.25 src/tests/fs/vfs/Makefile
 cvs rdiff -u -r0 -r1.1 src/tests/fs/vfs/t_mtime_write.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52738 CVS commit: src/sys/rump/librump/rumpvfs
Date: Sun, 19 Nov 2017 19:01:06 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Mon Nov 20 00:01:06 UTC 2017

 Modified Files:
 	src/sys/rump/librump/rumpvfs: rumpfs.c

 Log Message:
 PR/52738: Martin Husemann: rumpfs does not support mtime


 To generate a diff of this commit:
 cvs rdiff -u -r1.150 -r1.151 src/sys/rump/librump/rumpvfs/rumpfs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Mon, 20 Nov 2017 17:10:02 +0000
State-Changed-Why:
Christos fixed it


From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52738 CVS commit: [netbsd-8] src/sys/rump/librump/rumpvfs
Date: Mon, 26 Feb 2018 01:18:28 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Mon Feb 26 01:18:28 UTC 2018

 Modified Files:
 	src/sys/rump/librump/rumpvfs [netbsd-8]: rumpfs.c

 Log Message:
 Pull up following revision(s) (requested by maya in ticket #581):
 	sys/rump/librump/rumpvfs/rumpfs.c: 1.151-1.152
 PR/52738: Martin Husemann: rumpfs does not support mtime
 --
 When truncating a file make sure to update mtime.
 This fixes PR kern/51762 for rumpfs.


 To generate a diff of this commit:
 cvs rdiff -u -r1.150 -r1.150.2.1 src/sys/rump/librump/rumpvfs/rumpfs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.