Pull up following revision(s) (requested by maya in ticket #581): 	sys/rump/librump/rumpvfs/rumpfs.c: 1.151-1.152 PR/52738: Martin Husemann: rumpfs does not support mtime -- When truncating a file make sure to update mtime. This fixes PR kern/51762 for rumpfs.